--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod"
   },
+  "enginers": {
+    "node": "12.15.0",
+    "npm": "6.13.4"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.7",
